--- a/index.html
+++ b/index.html
@@ -20,32 +20,30 @@
 </head>
 <body>
 
-  Your Result
-  76
-  of 100
+  <div class="c">
+    <div class="c__1">
+      <h3 class="c__title-result">Your Result</h3>
+      <div class="c__score-container">
+        <h1 class="c__score">76</h1>
+        <p class="c__score-of">of 100</p>
+      </div>
 
-  Great
-  You scored higher than 65% of the people who have taken these tests.
-  
-  Summary
+      <h2 class="c__result">Great</h2>
+      <p class="c__description">Your performance exceed 65% of the people conducting the test here!</p>
+    </div>
+    <div class="c__2">
+      <h3 class="c__title-summary">Summary</h3>
+      <ul class="c__list">
+        <li class="c__item c__item--reaction"><img class="c__item-icon" src="./assets/images/icon-reaction.svg" alt="Reaction icon"/><p class="c__item-title">Reaction</p><p class="c__item-score">80 / <span>100</span></p></li>
+        <li class="c__item c__item--memory"><img  class="c__item-icon" src="./assets/images/icon-memory.svg" alt="Memory icon"/><p class="c__item-title">Memory</p><p class="c__item-score">92 / <span>100</span></p></li>
+        <li class="c__item c__item--verbal"><img class="c__item-icon" src="./assets/images/icon-verbal.svg" alt="Verbal icon"/><p class="c__item-title">Verbal</p><p class="c__item-score">61 / <span>100</span></p></li>
+        <li class="c__item c__item--visual"><img class="c__item-icon" src="./assets/images/icon-visual.svg" alt="Visual icon"/><p class="c__item-title">Visual</p><p class="c__item-score">73 / <span>100</span></p></li>
+      </ul>
 
-  Reaction
-  80 / 100
-
-  Memory
-  92 / 100
-
-  Verbal
-  61 / 100
-
-  Visual
-  72 / 100
-
-  Continue
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+      <button class="c__btn">Continue</button>
+    </div>
   </div>
+ 
+  
 </body>
 </html>
