--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <li class="c__item c__item--reaction"><img class="c__item-icon" src="./assets/images/icon-reaction.svg" alt="Reaction icon"/><p class="c__item-title">Reaction</p><p class="c__item-score"><strong>80</strong> <span>/ 100</span></p></li>
         <li class="c__item c__item--memory"><img  class="c__item-icon" src="./assets/images/icon-memory.svg" alt="Memory icon"/><p class="c__item-title">Memory</p><p class="c__item-score"><strong>92</strong> <span>/ 100</span></p></li>
         <li class="c__item c__item--verbal"><img class="c__item-icon" src="./assets/images/icon-verbal.svg" alt="Verbal icon"/><p class="c__item-title">Verbal</p><p class="c__item-score"><strong>61</strong> <span>/ 100</span></p></li>
-        <li class="c__item c__item--visual"><img class="c__item-icon" src="./assets/images/icon-visual.svg" alt="Visual icon"/><p class="c__item-title">Visual</p><p class="c__item-score"><strong>73</strong> <span> 100</span></p></li>
+        <li class="c__item c__item--visual"><img class="c__item-icon" src="./assets/images/icon-visual.svg" alt="Visual icon"/><p class="c__item-title">Visual</p><p class="c__item-score"><strong>73</strong> <span>/ 100</span></p></li>
       </ul>
 
       <button class="c__btn c__body-b">Continue</button>
